Add localhost identification to the navbar.

--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block scripts %}
-    <link rel="stylesheet" type="text/css" href="{% static 'core/lotNumRecords.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/blendShortages.css' %}">
 {% endblock scripts %}
-<link rel="stylesheet" type="text/css" href="{% static 'core/lotNumRecords.css' %}">
+    
 
 {% block content %}
 
