--- a/app/core/templates/core/reports/inventorycountsreport.html
+++ b/app/core/templates/core/reports/inventorycountsreport.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class='text-center'>
-        <h1>Count History for {{ part_info.part_number }} {{ part_info.part_desc }}</h1>
+        <h1>Count History for {{ item_info.part_number }} {{ item_info.part_desc }}</h1>
     </div>
 
     <table class="table text-left table-bordered table-hover">
