--- a/app/core/templates/core/reports/transactionsreport.html
+++ b/app/core/templates/core/reports/transactionsreport.html
@@ -7,7 +7,7 @@
         </div>  
     {% else %}
         <div class='text-center'>
-            <h1>Sage Transaction History for {{ item_info.part_number }} {{ item_info.desc }}</h1>
+            <h1>Sage Transaction History for {{ item_info.part_number }} {{ item_info.description }}</h1>
         </div>
         <div class="table-responsive-sm">
             <table class="table text-left table-bordered">
