Enhance templates & email functions.

--- a/app/core/templates/core/productionblendruns.html
+++ b/app/core/templates/core/productionblendruns.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% block title %}<title>Production Timetable</title>{% endblock %}
 
+{% block scripts %}
+<link rel="stylesheet" type="text/css" href="{% static 'core/productionRuns.css' %}">
+{% endblock scripts %}
 
 {% block content %}
     <div class='text-center'>
