--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,9 +32,21 @@
                         <!--Collapsable content-->
                         <div class="collapse navbar-collapse" id="navbarToggle">
                             <ul class="navbar-nav mr-auto">
+
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/core/forkliftchecklist">Forklift Checklist</a>
+                                    {% if user.is_staff %}
+                                        <a class="nav-link dropdown-toggle" href="#" id="forkliftChecklistDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Forklift Checklist
+                                        </a>
+                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <li><a class="dropdown-item" href="/core/forkliftchecklist/">Submit a Checklist</a></li>
+                                            <li><a class="dropdown-item" href="/core/checklistmgmt/">Email Reports Page</a></li>
+                                        </ul>
+                                    {% else %}
+                                        <a class="nav-link" href="/core/forkliftchecklist">Forklift Checklist</a>
+                                    {% endif %}
                                 </li>
+                                
                                 <li class="nav-item">
                                     <a class="nav-link" href="/core/tanklevels">Tank Levels</a>
                                 </li>
@@ -49,7 +61,6 @@
                                     </ul>
                                 </li>
                                 <!-- Blend Auditing Links -->
-                                {% if user.is_staff %}
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         Blend Auditing
@@ -67,8 +78,6 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="/core/lotnumrecords">Lot Numbers</a>
                                 </li>
-                                
-                                {% endif %}
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         Issue Sheets
