Implement a css folder in the static directory.

--- a/app/core/templates/core/addlottoschedule.html
+++ b/app/core/templates/core/addlottoschedule.html
@@ -5,7 +5,7 @@
 {% block title %}<title>Add Lot To Schedule</title>{% endblock %}
 
 {% block scripts %} 
-    <link rel="stylesheet" type="text/css" href="{% static 'core/addLotToSchedule.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/css/addLotToSchedule.css' %}">
 {% endblock scripts %}
 
 {% block content %}
