--- a/app/core/templates/core/blendsheet.html
+++ b/app/core/templates/core/blendsheet.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block scripts%} <link rel="stylesheet" type="text/css" href="{% static 'core/blendsheet.css' %}">{% endblock%}
+{% block scripts%} <link rel="stylesheet" type="text/css" href="{% static 'core/css/blendsheet.css' %}">{% endblock%}
 {% block content %}
 <table id="headerinfotable">
     <tr>
