--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block scripts %}
-    <link rel="stylesheet" type="text/css" href="{% static 'core/blendShortages.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/css/blendShortages.css' %}">
 {% endblock scripts %}
     
 
