--- a/app/core/templates/core/modals/schedule-addlot-modal.html
+++ b/app/core/templates/core/modals/schedule-addlot-modal.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'core/addLotToSchedule.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'core/css/addLotToSchedule.css' %}">
  
 <div class="modal fade" id="addToScheduleModal" tabindex="-1" aria-labelledby="addToScheduleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
