--- a/app/core/templates/core/productionblendruns.html
+++ b/app/core/templates/core/productionblendruns.html
@@ -3,7 +3,7 @@
 {% block title %}<title>Production Timetable</title>{% endblock %}
 
 {% block scripts %}
-<link rel="stylesheet" type="text/css" href="{% static 'core/productionRuns.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'core/css/productionRuns.css' %}">
 {% endblock scripts %}
 
 {% block content %}
