--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block scripts %} 
-    <link rel="stylesheet" type="text/css" href="{% static 'core/lotNumRecords.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/css/lotNumRecords.css' %}">
 {% endblock%}
 {% block title %}<title>Lot Numbers</title>{% endblock %}
 
