--- a/app/core/templates/core/modals/lotnum-add-modal.html
+++ b/app/core/templates/core/modals/lotnum-add-modal.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'core/lotNumModal.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'core/css/lotNumModal.css' %}">
  
 <div class="modal fade" id="addLotNumModal" tabindex="-1" aria-labelledby="addLotNumModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
