--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -5,7 +5,7 @@
 {% block title %}<title>Reports</title>{% endblock %}
 
 {% block scripts %} 
-    <link rel="stylesheet" type="text/css" href="{% static 'core/userforms.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/css/userforms.css' %}">
 {% endblock scripts %}
 
 
