--- a/app/core/templates/core/checklistmgmt.html
+++ b/app/core/templates/core/checklistmgmt.html
@@ -29,12 +29,12 @@
                 </a>
             {% endif %}
             </br>
-            <a href="/core/emailsubmissionreport/pmedlin@kinpakinc.com/no_cc" id="emailIssuesLink">
+            <a href="/core/emailsubmissionreport/pmedlin@kinpakinc.com/" id="emailIssuesLink">
                 <button class="btn btn-secondary">Email Submission Report</button>
             </a>
             </br>
             </br>
-            <a href="/core/emailissuereport/<recipient_address>/<cc_address>" id="emailSubmissionsLink">
+            <a href="/core/emailissuereport/pmedlin@kinpakinc.com/" id="emailSubmissionsLink">
                 <button class="btn btn-secondary">Email Issues Report</button>
             </a>
         </div>
