Improve feedback in datalooper.py output.

--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -42,13 +42,13 @@
                     </td>
                     <td>
                         <select name="which_report" id="id_which_report">
-                            <option data-reportval="Chem-Shortage" class="reportOption">Chem Shortage</option>
-                            <option data-reportval="Startron-Runs" class="reportOption">Startron Runs</option>
-                            <option data-reportval="Transaction-History" class="reportOption">Transaction History</option>
-                            <option data-reportval="Lot-Numbers" class="reportOption">Lot Numbers</option>
-                            <option data-reportval="All-Upcoming-Runs" class="reportOption">All Upcoming Runs</option>
-                            <option data-reportval="Count-History" class="reportOption">Count History</option>
-                            <option data-reportval="Counts-And-Transactions" class="reportOption">Counts And Transactions</option>
+                            <option reportval="Chem-Shortage" class="reportOption">Chem Shortage</option>
+                            <option reportval="Startron-Runs" class="reportOption">Startron Runs</option>
+                            <option reportval="Transaction-History" class="reportOption">Transaction History</option>
+                            <option reportval="Lot-Numbers" class="reportOption">Lot Numbers</option>
+                            <option reportval="All-Upcoming-Runs" class="reportOption">All Upcoming Runs</option>
+                            <option reportval="Count-History" class="reportOption">Count History</option>
+                            <option reportval="Counts-Transactions" class="reportOption">Counts And Transactions</option>
                         </select>
                     </td>
                 </tr>
