--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -32,30 +32,32 @@
             {% for item in blend_these_queryset %}
                 <tr {% if item.blend_pn == "602037" or item.blend_pn == "602602" %}class="msrRow"{% endif %}{% if item.needs_count %}needsCount="needsCount"{% endif %}>
                     <td>
-                        <div class="dropdown">
-                            <button class="btn dropdown-toggle blendinfo" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                {% if item.blend_pn == "602037" or item.blend_pn == "602602" %}
-                                    <img src="{% static 'core/media/shrk.png' %}" height="50" width="50"></img>
-                                {% else %}
-                                    <i class="fa fa-info-circle"></i>
-                                {% endif %}
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="/core/reports/Lot-Numbers/{{ item.blend_pn }}">
-                                    Lot Numbers
-                                </a></li>
-                                <li><a class="dropdown-item" href="/core/reports/Transaction-History/{{ item.blend_pn }}">
-                                    Transaction History
-                                </a></li>
-                                <li><a class="dropdown-item" href="/core/reports/All-Upcoming-Runs/{{ item.blend_pn }}">
-                                    Upcoming Runs
-                                </a></li>
-                                <li><a class="dropdown-item" href="/core/reports/Count-History/{{ item.blend_pn }}">
-                                    Count History
-                                </a></li>
-                            </ul>
-                            {{ item.blend_pn }}
-                        </div>
+                        <span title="{{ item.ingredients_list }}">
+                            <div class="dropdown">
+                                <button class="btn dropdown-toggle blendinfo" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                    {% if item.blend_pn == "602037" or item.blend_pn == "602602" %}
+                                        <img src="{% static 'core/media/shrk.png' %}" height="50" width="50"></img>
+                                    {% else %}
+                                        <i class="fa fa-info-circle"></i>
+                                    {% endif %}
+                                </button>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                    <li><a class="dropdown-item" href="/core/reports/Lot-Numbers/{{ item.blend_pn }}">
+                                        Lot Numbers
+                                    </a></li>
+                                    <li><a class="dropdown-item" href="/core/reports/Transaction-History/{{ item.blend_pn }}">
+                                        Transaction History
+                                    </a></li>
+                                    <li><a class="dropdown-item" href="/core/reports/All-Upcoming-Runs/{{ item.blend_pn }}">
+                                        Upcoming Runs
+                                    </a></li>
+                                    <li><a class="dropdown-item" href="/core/reports/Count-History/{{ item.blend_pn }}">
+                                        Count History
+                                    </a></li>
+                                </ul>
+                                {{ item.blend_pn }}
+                            </div>
+                        </span>
                     </td>
                     <td>{{ item.blend_desc }}</td>
                     <td>                            
