--- a/app/core/templates/core/reports/transactionsreport.html
+++ b/app/core/templates/core/reports/transactionsreport.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
+
 
 {% block content %}
+<link rel="stylesheet" type="text/css" href="{% static 'core/css/transactionsReport.css' %}">
     {% if no_transactions_found %}
         <div class='text-center'>
             <h1> No transactions found.</h1>
@@ -21,7 +24,7 @@
                     </tr>
                 </thead>
                 {% for item in transactions_list %}
-                    <tr>
+                    <tr {% if item.transactionqty < 0 %}class="creditRow"{% else %}class="debitRow"{% endif %}>
                         <td>{{ item.itemcode }}</td>
                         <td>{{ item.description }}</td>
                         <td>{{ item.transactiondate }}</td>
