--- a/app/core/templates/core/blendschedules/allschedules.html
+++ b/app/core/templates/core/blendschedules/allschedules.html
@@ -10,38 +10,39 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
         <div class="accordion-body">
-        <div class="table-responsive-sm">
-            <table class="table text-left table-bordered">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">Bill No.</th>
-                        <th scope="col">PO No.</th>
-                        <th scope="col">Blend</th>
-                        <th scope="col">Description</th>
-                        <th scope="col">Total Blend Qty</th>
-                        <th scope="col"># of Blends</th>
-                        <th scope="col">Run Date</th>
-                        <th scope="col">Create Lot Number</th>
-                    </tr>
-                </thead>
-                {% for item in horix_blends %}
-                    <tr>
-                        <td>{{ item.pn }}</td>
-                        <td>{{ item.po_field }}</td>
-                        <td>{{ item.itemcode }}</td>
-                        <td>{{ item.blend_desc }}</td>
-                        <td>{{ item.gallonqty }}</td>
-                        <td>{{ item.num_blends }}</td>
-                        <td>{{ item.run_date|date:"M d, Y" }}</td>
-                        <td class="text-center lotNumCell">
+            <a href="/core/blendschedule/Hx">View Horix Schedule Page</a>
+            <div class="table-responsive-sm">
+                <table class="table text-left table-bordered">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Bill No.</th>
+                            <th scope="col">PO No.</th>
+                            <th scope="col">Blend</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Total Blend Qty</th>
+                            <th scope="col"># of Blends</th>
+                            <th scope="col">Run Date</th>
+                            <th scope="col">Create Lot Number</th>
+                        </tr>
+                    </thead>
+                    {% for item in horix_blends %}
+                        <tr>
+                            <td>{{ item.pn }}</td>
+                            <td>{{ item.po_field }}</td>
+                            <td>{{ item.itemcode }}</td>
+                            <td>{{ item.blend_desc }}</td>
+                            <td>{{ item.gallonqty }}</td>
+                            <td>{{ item.num_blends }}</td>
+                            <td>{{ item.run_date|date:"M d, Y" }}</td>
+                            <td class="text-center lotNumCell">
 
-                            <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Hx" data-rundate="{{ item.run_date|date:"m/d/Y" }}" data-partnum="{{ item.itemcode }}" data-desc="{{ item.blend_desc }}" data-desk="{{ item.desk }}" data-threewkqty="{{ item.gallonqty }}">+</button>
+                                <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Hx" data-rundate="{{ item.run_date|date:"m/d/Y" }}" data-partnum="{{ item.itemcode }}" data-desc="{{ item.blend_desc }}" data-desk="{{ item.desk }}" data-threewkqty="{{ item.gallonqty }}">+</button>
 
-                        </td>
-                    </tr>
-                {% endfor %}
-            </table>
-        </div>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
         </div>
     </div>
     </div>
@@ -54,6 +55,7 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
         <div class="accordion-body">
+        <a href="/core/blendschedule/Dm">View Drum Schedule Page</a>
         <div class="table-responsive-sm">
             <table class="table text-left table-bordered">
                 <thead class="thead-dark">
@@ -97,6 +99,7 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
         <div class="accordion-body">
+        <a href="/core/blendschedule/Totes">View Totes Schedule Page</a>
         <div class="table-responsive-sm">
             <table class="table text-left table-bordered">
                 <thead class="thead-dark">
@@ -139,6 +142,7 @@
     </h2>
     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
         <div class="accordion-body">
+        <a href="/core/blendschedule/Pails">View Pails Schedule Page</a>
         <div class="table-responsive-sm">
             <table class="table text-left table-bordered">
                 <thead class="thead-dark">
@@ -181,6 +185,7 @@
     </h2>
     <div id="collapseFive" class="accordion-collapse collapse show" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
     <div class="accordion-body">
+        <a href="/core/blendschedule/Desk_1">View Desk 1 Schedule Page</a>
         <div class="table-responsive-sm">
             <table class="table text-left table-bordered">
                 <thead class="thead-dark">
@@ -238,6 +243,7 @@
     </h2>
     <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
     <div class="accordion-body">
+        <a href="/core/blendschedule/Desk_2">View Desk 2 Schedule Page</a>
         <div class="table-responsive-sm">
             <table class="table text-left table-bordered">
                 <thead class="thead-dark">
